# mo_ros2_rainbow_robot

rb_connector/: CMakeLists.txt  package.xml
rb_connector/include/rb_connector/: common_header.hpp  rb_connector.hpp
rb_connector/launch/: rb_connector.launch  rb_connector.launch.py  rb_connector.py
rb_connector/msg/: RbCommand.msg  RbData.msg
rb_connector/src/: rb_connector.cpp  rb_connector_node.cpp
rb_description/: CMakeLists.txt  package.xml
rb_description/launch/: rb10_world.launch.py  rb10_world_moveit.launch.py
rb_description/meshes/collision/RB10/: RB10-AXIS-0.stl  RB10-AXIS-2.stl  RB10-AXIS-3.stl  RB10-AXIS-5.stl
rb_description/meshes/collision/RB3/: RB3-AXIS-1.stl  RB3-AXIS-2.stl  RB3-AXIS-3.stl  RB3-AXIS-4.stl  RB3-AXIS-5.stl  RB3-AXIS-6.stl
rb_description/meshes/visual/RB10/: RB10-AXIS-1.stl  RB10-AXIS-4.stl  RB10-AXIS-6.stl
rb_description/meshes/visual/RB3/: RB3-AXIS-1.dae  RB3-AXIS-2.dae  RB3-AXIS-3.dae  RB3-AXIS-4.dae  RB3-AXIS-5.dae  RB3-AXIS-6.dae
rb_description/urdf/: rb10.urdf  rb10_moveit.xacro
rb_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rb_moveit_config/config/: fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  rb10.ros2_control.xacro  rb10.srdf  rb10.urdf.xacro  ros2_controllers.yaml
rb_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rb10_moveit.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
