<?xml version="1.0"?>
<package format="3">
  <name>rb_connector</name>
  <version>0.1.0</version>
  <description>The rb_connector package</description>

  <maintainer email="jhlee@plaif.com">jhlee</maintainer>
  <author email="jhlee@plaif.com">jhlee</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclcpp_action</build_depend>

  <depend>rclcpp</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>control_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
